[package]
name = "redis-protocol-parser"
version = "0.1.1"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
edition = "2018"
license = "MIT"
description = "REdis Syntax Protocol (RESP) parser library without any dependency."
repository = "https://github.com/hbina/redis-protocol-parser"
